--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node js app to get my own LoL data",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/app.js",
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
