--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
   },
   "homepage": "https://github.com/simtaxx/myLoL#readme",
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
@@ -30,6 +27,9 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "@babel/core": "^7.11.4",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0"
   }
 }
