--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Node js app to get my own LoL data",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && nodemon --exec babel-node ./build/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s"
   },
   "repository": {
     "type": "git",
@@ -19,17 +22,19 @@
   },
   "homepage": "https://github.com/simtaxx/myLoL#readme",
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.0",
+    "babel-cli": "^6.26.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "path": "^0.12.7",
-    "@babel/core": "^7.11.4",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0"
+    "path": "^0.12.7"
   }
 }
