--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@babel/core": "^7.11.4",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.0",
-    "nodemon": "^2.0.4"
   },
   "dependencies": {
     "axios": "^0.20.0",
@@ -35,6 +34,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "path": "^0.12.7",
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "nodemon": "^2.0.4"
   }
 }
